# tracklab

./: .gitignore  README.md  pyproject.toml  requirements.txt  verify_setup.sh
.devcontainer/: Dockerfile  README.md  devcontainer.json  post-install.sh
docs/: GS-HOTA.md  high_level_desgin.md  reelmind_ai.md  tutorial.md
docs/api/: tracklab.rst  tracklab.wrappers.bbox_detector.rst  tracklab.wrappers.dataset.mot_like.rst  tracklab.wrappers.dataset.posetrack.rst  tracklab.wrappers.dataset.rst  tracklab.wrappers.dataset.soccernet.rst  tracklab.wrappers.eval.posetrack.rst  tracklab.wrappers.eval.rst  tracklab.wrappers.eval.soccernet.rst  tracklab.wrappers.pose_estimator.rst  tracklab.wrappers.reid.rst  tracklab.wrappers.rst  tracklab.wrappers.track.rst  tracklab.wrappers.tracklet_agg.rst
docs/tutorials/: MOT_dataset.md
plugins/calibration/: README.md  pyproject.toml
plugins/calibration/pnlcalib/: README.md
plugins/calibration/sn_calibration_baseline/: README.md
plugins/calibration/tvcalib/: sncalib_dataset.py
plugins/track/: pyproject.toml
plugins/track/bpbreid_strong_sort/sort/: nn_matching.py
sn_gamestate/configs/: soccernet.yaml
sn_gamestate/configs/visualization/: colors_gs.yaml  gamestate.yaml
sn_gamestate/visualization/: __init__.py  pitch.py
tracklab/: main.py
tracklab/configs/: config.yaml  kang.yaml  tracklab.yaml  yolo_finetune_full.yaml  yolo_soccernet_finetune.yaml  yolo_training_example.yaml
tracklab/configs/dataset/: bee24.yaml  dancetrack.yaml  kang.yaml  mot17.yaml  mot20.yaml  posetrack18.yaml  posetrack21.yaml  soccernet_gs.yaml  soccernet_mot.yaml  sportsmot.yaml  video.yaml  youtube.yaml
tracklab/configs/eval/: gs_hota.yaml  posetrack18.yaml  posetrack21.yaml  trackeval.yaml
tracklab/configs/modules/bbox_detector/: rtdetr_transformers.yaml  rtdetr_transformers_s.yaml  rtdetr_transformers_x.yaml  rtmdet_rtmlib.yaml  yolo_ultralytics.yaml  yolo_ultralytics_football_offline.yaml  yolo_ultralytics_l.yaml  yolo_ultralytics_s.yaml  yolo_ultralytics_soccernet.yaml  yolo_ultralytics_trainable.yaml  yolo_ultralytics_x.yaml  yolox_rtmlib.yaml  yolox_rtmlib_l.yaml  yolox_rtmlib_s.yaml  yolox_rtmlib_x.yaml
tracklab/configs/modules/calibration/: baseline.yaml  bbox2pitch.yaml  nbjw_calib.yaml  pnlcalib.yaml  tvcalib.yaml
tracklab/configs/modules/jersey_number_detect/: easyocr.yaml  mmocr.yaml
tracklab/configs/modules/pitch/: baseline.yaml  nbjw_calib.yaml  pnlcalib.yaml  tvcalib.yaml
tracklab/configs/modules/pose_estimator/: rtmo_rtmlib.yaml  rtmo_rtmlib_l.yaml  rtmo_rtmlib_s.yaml  rtmpose_rtmlib.yaml  rtmpose_rtmlib_l.yaml  rtmpose_rtmlib_s.yaml  rtmpose_rtmlib_x.yaml  vitpose_transformers.yaml  vitpose_transformers_l.yaml  vitpose_transformers_s.yaml  vitpose_transformers_x.yaml  yolo_ultralytics-pose.yaml  yolo_ultralytics-pose_l.yaml  yolo_ultralytics-pose_s.yaml  yolo_ultralytics-pose_x.yaml
tracklab/configs/modules/reid/: bpbreid.yaml  kpr.yaml  prtreid.yaml
tracklab/configs/modules/team/: kmeans_embeddings.yaml
tracklab/configs/modules/team_side/: mean_position.yaml
tracklab/configs/modules/track/: bot_sort.yaml  bpbreid_strong_sort.yaml  byte_track.yaml  deep_oc_sort.yaml  oc_sort.yaml  strong_sort.yaml
tracklab/configs/modules/tracklet_agg/: majority_vote.yaml  voting_role_jn.yaml
tracklab/configs/visualization/: bbox.yaml  colors.yaml  gamestate.yaml
tracklab/datastruct/: tracker_state.py
tracklab/engine/: offline.py  video.py
tracklab/pipeline/: __init__.py
tracklab/pipeline/bbox_detector/: README.md  __init__.py  yolo_ultralytics_api.py
tracklab/pipeline/calibration/: README.md  __init__.py
tracklab/pipeline/calibration/nbjw_calib/: README.md  nbjw_calib_api.py
tracklab/pipeline/calibration/pnlcalib/: README.md  pnlcalib_api.py
tracklab/pipeline/calibration/sn_calibration_baseline/: README.md  baseline_cameras.py  camera.py  dataloader.py  evaluate_extremities.py  sn_calibration_baseline_api.py  sn_calibration_baseline_bbox2pitch_api.py  sn_calibration_baseline_pitch_api.py
tracklab/pipeline/calibration/tvcalib/: README.md
tracklab/pipeline/dataset/mot_like/: common.py
tracklab/pipeline/dataset/posetrack/: posetrack21.py
tracklab/pipeline/dataset/soccernet/: soccernet_game_state.py  soccernet_mot.py
tracklab/pipeline/eval/: trackeval_evaluator.py
tracklab/pipeline/eval/posetrack/: posetrack21_evaluator.py
tracklab/pipeline/jersey/: README.md  __init__.py
tracklab/pipeline/pose_estimator/: README.md  __init__.py
tracklab/pipeline/reid/: README.md  __init__.py  prtreid_api.py  prtreid_dataset.py
tracklab/pipeline/team/: README.md  __init__.py  tracklet_team_side_labeling_api.py
tracklab/pipeline/track/: README.md  __init__.py
tracklab/pipeline/track/bot_sort/: bot_sort.py  bot_sort_api.py
tracklab/pipeline/track/deep_oc_sort/: deep_oc_sort_api.py  reid_multibackend.py
tracklab/pipeline/track/strong_sort/: strong_sort_api.py
tracklab/pipeline/tracklet_agg/: README.md  __init__.py
tracklab/utils/: cv2.py  download.py  monkeypatch_hydra.py
tracklab/visualization/: detection.py  pitch.py  players.py  tracking.py  visualization_engine.py  visualizer.py
tracklab/wrappers/: __init__.py
tracklab/wrappers/bbox_detector/: README.md  mmdetection_api.py
tracklab/wrappers/calibration/: README.md  __init__.py  nbjw_calib_api.py  pnlcalib_api.py  sn_calibration_baseline_api.py  sn_calibration_baseline_bbox2pitch_api.py  sn_calibration_baseline_pitch_api.py  tvcalib_api.py
tracklab/wrappers/calibration/nbjw_calib/: README.md
tracklab/wrappers/calibration/tvcalib/: README.md  (+1 more)
tracklab/wrappers/dataset/: __init__.py
tracklab/wrappers/eval/: __init__.py  trackeval_evaluator.py
tracklab/wrappers/jersey/: README.md  mmocr_api.py
tracklab/wrappers/pose_estimator/: README.md
tracklab/wrappers/reid/: README.md  prtreid_api.py
tracklab/wrappers/team/: README.md
tracklab/wrappers/track/: README.md  bot_sort_api.py  bpbreid_strong_sort_api.py  byte_track_api.py  deep_oc_sort_api.py  oc_sort_api.py  strong_sort_api.py
tracklab/wrappers/tracklet_agg/: README.md
(+22 files in other folders)
