[project]
name = "tracklab"
version = "1.3.23"
description = "A Modular End-to-End Tracking Framework for Research and Development"
readme = "README.md"
authors = [
    { name = "Victor Joos", email = "victorjoosdtb@gmail.com" },
    { name = "Baptiste Standaert", email = "baptiste.standaert@uclouvain.be"},
    { name = "Vladimir Somers", email = "vladimir.somers@uclouvain.be"},
]

requires-python = ">=3.9,<3.10"
dependencies = [
    "hydra-core",
    "lightning==2.0.9",
    "pytorch_lightning",
    "numpy<2.0",
    "ultralytics",
    "filterpy",
    "torch==2.0.1",
    "torchvision==0.15.2",
    "soccernet==0.1.55",
    "yt-dlp",
    "gdown",
    "pandas",
    "matplotlib",
    "rich",
    "tabulate",
    "monai==1.0.1",  # compatible with PyTorch 2.0.1
    "sn-trackeval",
    "lap",
    "distinctipy",
    "rtmlib",
    "transformers>=4.21.0,<4.23.0",  # compatible with PyTorch 2.0.1
    "accelerate>=0.19.0,<1.0",  # compatible with older transformers and PyTorch
    "huggingface-hub",
    "opencv-python",
    "tqdm",
    "omegaconf",
    "requests",
    "wandb",
    "scipy",
    "yacs",
    "scikit-image",
    "tensorboard>=2.20.0,<3.0",  # compatible with PyTorch 1.13.1
    "easyocr>=1.7.1,<2.0",
    "mmocr==1.0.1",  # specific version for compatibility
    "mmdet>=3.0.0rc0,<3.1.0",  # required for mmocr (version constraint for compatibility)
    "mmcls",  # required for mmocr
    "mmcv>=2.0.0,<2.1.0",  # required for mmocr with CUDA support
    "mmengine",  # required for some modules
    "openmim==0.3.9",
    "albumentations>=0.5.2,<2.0",  # downgraded for prtreid compatibility (no is_check_shapes parameter)
    "calibration",
]

[dependency-groups]
dev = [
    "tracklab",
    "sphinx",
    "sphinx_rtd_theme",
    "myst-parser",
]

[project.scripts]
tracklab = "tracklab.main:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = [".", "plugins/track"]
include = ["tracklab*", "bot_sort*", "bpbreid_strong_sort*", "byte_track*",
    "deep_oc_sort*", "oc_sort*", "strong_sort*", "hydra_plugins.*"]
exclude = []

[tool.setuptools.package-data]
"*" = ["*.txt", "*.rst", "*.yaml"]

[tool.uv]
no-build-isolation-package = ["chumpy"]
environments = ["sys_platform == 'linux'"]

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu117"
explicit = true

[tool.uv.sources]
# PyTorch packages need to use the official PyTorch index for CUDA versions
torch = { index = "pytorch" }
torchvision = { index = "pytorch" }
calibration = { workspace = true, editable = true }

[tool.uv.workspace]
members = [
    "plugins/calibration",
]
