[project]
name = "tracklab-calibration"
version = "1.0.2"
description = ""
authors = [
    {name = "Victor Joos", email = "victor.joos@uclouvain.be"}
]
dependencies = [
    "python>=3.10",
    "kornia==0.6.3",
    "lsq-ellipse>=2.2.1"
]

[tool.setuptools.packages]
find = {include = ["nbjw_calib", "tvcalib", "sn_calibration_baseline", "pnlcalib"]}

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"