[project]
name = "calibration"
version = "1.0.2"
description = ""
authors = [
    {name = "Victor Joos", email = "victor.joos@uclouvain.be"}
]
dependencies = [
    "hydra-core>=1.3.2",
    "kornia==0.6.3",
    "lsq-ellipse>=2.2.1",
    "numpy>=1.21.0,<2.0.0",
    "omegaconf>=2.3.0",
    "opencv-python>=4.11.0.86",
    "pandas>=2.3.2",
    "rich>=14.1.0",
    "torch>=1.12.0,<2.0.0",
    "torchvision>=0.13.0,<1.0.0",
]

[tool.setuptools.packages]
find = {include = ["nbjw_calib", "tvcalib", "sn_calibration_baseline", "pnlcalib"]}

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
