[project]
name = "track-bench-track"
version = "1.0.1"
description = ""
authors = [
    {name = "Vladimir Somers", email = "vladimir.somers@uclouvain.be"},
    {name = "Victor Joos", email = "victor.joos@uclouvain.be"},
    {name = "Baptiste Standaert", email = "baptiste.standaert@uclouvain.be"}
]

[tool.setuptools.packages]
find = {include = ["bot_sort", "bpbreid_strong_sort", "byte_track", "deep_oc_sort", "oc_sort", "strong_sort"]}

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"